fix overflow and favorites css

--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@ menu .nav-item {
 main {
     flex: 1;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     justify-content: center;
